[project]
name = "integrations"
version = "1.0.0"
description = "julep integrations service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "langchain-community~=0.3.0",
  "fastapi~=0.115.0",
  "uvicorn~=0.30.6",
  "langchain~=0.3.0",
  "pydantic[email]~=2.9.2",
  "duckduckgo-search~=6.2.13",
  "openai~=1.47.1",
  "tweepy~=4.14.0",
  "wikipedia~=1.4.0",
  "fire~=0.6.0",
  "pyowm~=3.3.0",
  "spider-client~=0.0.70",
  "browserbase>=1.0.5",
  "setuptools~=75.1.0",
  "beartype~=0.19.0",
  "tenacity>=8.2.0,<8.4.0",
  "gunicorn~=23.0.0",
  "uvloop~=0.21.0",
  "selenium~=4.25.0",
  "playwright~=1.48.0",
  "httpx~=0.27.2",
  "pillow~=11.0.0",
  "llama-index~=0.11.22",
  "llama-parse~=0.5.13",
  "cloudinary~=1.41.0",
  "environs~=11.2.1",
  "arxiv~=2.1.3",
  "sentry-sdk[flask]>=2.19.0",
  "unstructured-client>=0.28.1",
  "algoliasearch>=4.14.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26.3",
    "poethepoet>=0.31.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ty>=0.0.1a8",  # AIDEV-NOTE: switched from pytype/pyright to ty
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty.rules]
# AIDEV-NOTE: pytype replaced with ty; rules tuned for initial migration
# TODO: Progressively remove these ignore rules to tighten type safety
invalid-parameter-default = "ignore"
invalid-argument-type = "ignore"
unknown-argument = "ignore"
invalid-type-form = "ignore"
missing-argument = "ignore"
unresolved-attribute = "ignore"
invalid-assignment = "ignore"
possibly-unbound-attribute = "ignore"
no-matching-overload = "ignore"
not-iterable = "ignore"
unsupported-operator = "ignore"

