[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "julep-common"
version = "0.1.0"
description = "Shared utilities for Julep services"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "environs>=10.0",
]

[tool.setuptools]
py-modules = ["julep_common"]
