[tool.poetry]
name = "samantha-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "samantha_api"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
torch = "^2.1.2"
environs = "^10.0.0"
xxhash = "^3.2.0"
pynvml = "^11.5.0"
psutil = "^5.9.7"
starlette-exporter = "^0.17.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.1"}
vllm = "^0.3.0"
jsonschema = "^4.21.1"
aioprometheus = {extras = ["starlette"], version = "^23.12.0"}
lm-format-enforcer = "^0.8.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^8.0.0"
modal = "^0.56.4964"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
