[tool.poetry]
name = "model-api"
version = "0.1.0"
description = ""
authors = ["Julep Developers <developers@julep.ai>"]
readme = "README.md"
packages = [{include = "model_api"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
torch = "^2.1.2"
environs = "^10.0.0"
xxhash = "^3.2.0"
pynvml = "^11.5.0"
psutil = "^5.9.7"
starlette-exporter = "^0.17.1"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.1"}
vllm = "^0.3.1"
aioprometheus = {extras = ["starlette"], version = "^23.12.0"}
lm-format-enforcer = "^0.8.3"
interegular = "^0.3.3"
pydantic = {extras = ["email"], version = "^2.6.1"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^8.0.0"
modal = "^0.56.4964"
ipython = "^8.21.0"
ruff = "^0.1.9"
poethepoet = "^0.24.4"
pytype = "^2024.1.5"
julep = "^0.2.1"
jupyterlab = "^4.1.1"
ipywidgets = "^8.1.2"
matplotlib = "^3.8.2"
ipympl = "^0.9.3"
mplcursors = "^0.5.3"
scikit-learn = "^1.4.0"
datasets = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
prettify = "black ."
lint = "ruff **/*.py --fix --unsafe-fixes"
typecheck = "pytype model_api"
check = [
    "prettify",
    "lint",
    "typecheck",
]
