[project]
name = "responses-api"
version = "1.0.0"
description = "OpenAI Responses API implementation for Julep"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiobotocore>=2.15.2",
  "anyio>=4.4.0",
  "arrow>=1.3.0",
  "async-lru>=2.0.4",
  "beartype>=0.18.5",
  "environs>=10.3.0",
  "fastapi>=0.115.4",
  "fire>=0.5.0",
  "gunicorn>=23.0.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "jsonschema>=4.22.0",
  "langchain-core>=0.3.14",
  "litellm>=1.57.0",
  "lz4>=4.3.3",
  "msgpack>=1.1.0",
  "numpy>=2.0.0,<2.1.0",
  "pandas>=2.2.2",
  "prometheus-client>=0.21.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "pydantic>=2.10.2",
  "python-box>=7.2.0",
  "sentry-sdk[fastapi]>=2.13.0",
  "sse-starlette>=2.1.3",
  "tenacity>=9.0.0",
  "tiktoken>=0.7.0",
  "uvicorn>=0.30.6",
  "uvloop>=0.21.0",
  "xxhash>=3.5.0",
  "uuid7>=0.1.0",
  "asyncpg>=0.30.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26.3",
    "ipython>=8.30.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.1",
    "pip>=24.3.1",
    "poethepoet>=0.31.1",
    "pyjwt>=2.10.1",
    "pyright>=1.1.391",
    "pytype>=2024.10.11",
    "ruff>=0.9.0",
    "testcontainers>=4.9.0",
    "ward>=0.68.0b0",
    "psycopg[binary]>=3.2.5",
]

[tool.setuptools]
py-modules = [
    "responses_api",
]

extend-safe-fixes = [""] 