[tool.poetry]
name = "memory-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pycozo = {version = "^0.7.5", extras = ["embedded,requests,pandas"]}
uvicorn = "^0.23.2"
fire = "^0.5.0"
environs = "^9.5.0"
google-cloud-aiplatform = "^1.33.0"
pandas = "^2.1.0"
openai = "^0.28.0"
httpx = "^0.25.0"
async-lru = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
