[tool.poetry]
name = "memory-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
pycozo = {extras = ["embedded"], version = "^0.7.6"}
uvicorn = "^0.23.2"
fire = "^0.5.0"
environs = "^9.5.0"
google-cloud-aiplatform = "^1.33.0"
pandas = "^2.1.0"
openai = "^0.28.0"
httpx = "^0.25.0"
async-lru = "^2.0.4"
sentry-sdk = {extras = ["fastapi"], version = "^1.38.0"}
ward = "^0.68.0b0"
temporalio = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
black = "^23.12.1"
ruff = "^0.1.9"
datamodel-code-generator = "^0.25.2"
cozo-migrate = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
