[project]
name = "integrations"
version = "1.0.0"
description = "julep integrations service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "langchain-community~=0.3.0",
  "fastapi~=0.115.0",
  "uvicorn~=0.30.6",
  "langchain~=0.3.0",
  "pydantic[email]>=2.11.2,<3.0.0",
  "duckduckgo-search~=6.2.13",
  "openai~=1.47.1",
  "tweepy~=4.14.0",
  "wikipedia~=1.4.0",
  "fire~=0.6.0",
  "pyowm~=3.3.0",
  "spider-client~=0.0.70",
  "browserbase>=1.0.5",
  "setuptools~=75.1.0",
  "beartype~=0.19.0",
  "tenacity>=8.2.0,<8.4.0",
  "gunicorn~=23.0.0",
  "uvloop~=0.21.0",
  "selenium~=4.25.0",
  "playwright~=1.48.0",
  "httpx~=0.27.2",
  "pillow~=11.0.0",
  "llama-index~=0.11.22",
  "llama-parse~=0.5.13",
  "cloudinary~=1.41.0",
  "environs~=11.2.1",
  "arxiv~=2.1.3",
  "sentry-sdk[flask]>=2.19.0",
  "unstructured-client==0.42.3",
  "algoliasearch>=4.14.0",
  "mcp>=1.8.0",
  "google-api-python-client>=2.181.0",
  "google-auth>=2.40.3",
  "google-auth-oauthlib>=1.2.2",
  "google-auth-httplib2>=0.2.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.26.3",
    "poethepoet>=0.31.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytype>=2024.10.11",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
